--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
     "lucide-react": "^0.562.0",
-    "next": "16.1.0",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "mongodb": "^7.0.0",
+    "next": "15.1.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-leaflet": "^5.0.0",
     "tailwind-merge": "^3.4.0"
   },
