--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "leaflet-routing-machine": "^3.2.12",
     "lucide-react": "^0.562.0",
     "mongodb": "^7.0.0",
-    "next": "15.1.0",
+    "next": "^15.5.9",
+    "next-pwa": "^5.6.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-leaflet": "^5.0.0",
