--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.4",
+    "@serwist/next": "^9.4.2",
+    "@serwist/sw": "^9.4.2",
     "@types/leaflet-routing-machine": "^3.2.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -19,18 +21,18 @@
     "lucide-react": "^0.562.0",
     "mongodb": "^7.0.0",
     "next": "^15.5.9",
-    "next-pwa": "^5.6.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-leaflet": "^5.0.0",
+    "serwist": "^9.4.2",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/leaflet": "^1.9.21",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "eslint": "^9",
     "eslint-config-next": "16.1.0",
     "tailwindcss": "^4",
